[package]
name = "kube-postgress-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
futures = "0.3.26"
k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
kube = { version = "0.78.0", default-features = false, features = ["client", "rustls-tls"] }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-postgres = "0.7.7"

[patch.crates-io]
# fix for https://github.com/rustls/rustls/issues/184
rustls = { git = "https://github.com/metalbear-co/rustls", branch = "feat-ip-address" }

[patch."https://github.com/ctz/webpki"]
webpki = { git = "https://github.com/metalbear-co/webpki", branch = "feat-ip-address" }
